# AngewandteProgrammierung-I

./: README.md  apitest.py  class_based_ decorator  frontend.py  log  main.py  main_day3.py  main_sqlmodel.py  notes.db  pyproject.toml  test_notes.py  work-log.md
data/: notes.json
exploration/: apitest.py  day4.py  test day4  test_main.py  test_main_client.py
