[project]
name = "angewandteprogrammierung-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.15.0",
    "fastapi[standard]>=0.136.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "run>=0.3",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
